@@ -8,23 +8,15 @@ module ActiveScaffold
       @active_scaffold_constraints ||= active_scaffold_session_storage[:constraints] || {}
     end
 
-    def set_active_scaffold_constraints
-      associations_by_params = {}
-      active_scaffold_config.model.reflect_on_all_associations.each do |association|
-        associations_by_params[association.klass.name.foreign_key] = association.name unless association.options[:polymorphic]
-      end
-      params.each do |key, value|
-        active_scaffold_constraints[associations_by_params[key]] = value if associations_by_params.include? key
-      end
-    end
-
     # For each enabled action, adds the constrained columns to the ActionColumns object (if it exists).
     # This lets the ActionColumns object skip constrained columns.
     #
     # If the constraint value is a Hash, then we assume the constraint is a multi-level association constraint (the reverse of a has_many :through) and we do NOT register the constraint column.
-    def register_constraints_with_action_columns(association_constrained_fields = [], exclude_actions = [])
+    def register_constraints_with_action_columns(exclude_actions = [])
+Rails.logger.debug "CONSTRAINTS: "+active_scaffold_constraints.inspect
       constrained_fields = active_scaffold_constraints.reject{|k, v| v.is_a? Hash}.keys.collect{|k| k.to_sym}
-      constrained_fields = constrained_fields | association_constrained_fields
+Rails.logger.debug "CONSTRAINTS: "+constrained_fields.inspect
+      exclude_actions << :list unless active_scaffold_config.list.hide_nested_column
       if self.class.uses_active_scaffold?
         # we actually want to do this whether constrained_fields exist or not, so that we can reset the array when they don't
         active_scaffold_config.actions.each do |action_name|
